<resources>
    <string name="app_name">QuakeCheck</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>
    <string name="limit_default_value">20</string>
    <string name="limit_key">limit_key</string>
    <string name="limit_title">No of results</string>
    <string name="orderby_key">order_by_key</string>
    <string name="orderby_title">Order by</string>
    <string name="orderby_default">title</string>

    <string-array name="order_by_entries">
        <item>Most Recent</item>
        <item>Highest Magnitude</item>
    </string-array>
    <string-array name="order_by_values">
        <item>time</item>
        <item>magnitude</item>
    </string-array>
</resources>
